refactored little single-message views into info.html

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -55,8 +55,8 @@
                     <div class="row">
                         <!-- trending books title -->
                         <div class="col-sm-12 my-3">
-                            <hr/>
-                            <h2 class="text-info text-center">- Trending Books -</h2>
+                            <h3 class="text-info ml-4">Trending Books</h3>
+                            <hr class="my-0"/>
                         </div>
                         <!-- trending books -->
                         <div class="col-sm-12 my-3">
@@ -113,8 +113,8 @@
                         </div>
                         <!-- new books title -->
                         <div class="col-sm-12 my-3">
-                            <hr class="mt-0 mb-4"/>
-                            <h2 class="text-info text-center my-2">- New Books -</h2>
+                            <h3 class="text-info ml-4">New In Stock</h3>
+                            <hr class="my-0"/>
                         </div>
                         <!-- new books -->
                         <div class="col-sm-12 my-3">
