--- a/src/main/resources/templates/images.html
+++ b/src/main/resources/templates/images.html
@@ -71,7 +71,7 @@
                             <tr>
                                 <th>Image</th>
                                 <th>Name</th>
-                                <th>is Default</th>
+                                <th>Default</th>
                                 <th>MIME type</th>
                                 <th>Size (bytes)</th>
                                 <th><small>Last modified</small></th>
