improved categories.html

--- a/src/main/resources/templates/categories.html
+++ b/src/main/resources/templates/categories.html
@@ -11,14 +11,14 @@
             <!-- main categories -->
             <div th:replace="fragments/components::mainCatsNavBar"></div>
             <!-- title -->
-            <div th:replace="fragments/components::title(text = 'Categories')"></div>
+            <div th:replace="fragments/components::title_1_11(text = 'Categories')"></div>
             <!-- main content -->
             <div class="row">
-                <div class="col-sm-2"></div>
-                <div class="col-sm-8" id="root-hook">
+                <div class="col-sm-1"></div>
+                <div class="col-sm-10" id="root-hook">
                     <!-- new category -->
-                    <div class="my-2">
-                        <a class="btn btn-outline-secondary align-center px-4" th:href="@{/admin/categoryForm}">
+                    <div class="my-2 d-flex">
+                        <a class="btn btn-outline-secondary align-center px-4 ml-auto" th:href="@{/admin/categoryForm}">
                             <i class="fas fa-folder-plus fa-lg mr-4"></i>New Category
                         </a>
                     </div>
@@ -27,7 +27,7 @@
                     js dynamic generated content here
                     -->
                 </div>
-                <div class="col-sm-2"></div>
+                <div class="col-sm-1"></div>
             </div>
             <!-- modal -->
             <div th:replace="fragments/components::deletingModal(entity = 'Category')"></div>
